helloworld/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 4
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ksericpro/backend:1.0.0
          #imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
